CentOS 6.6情報追加とあわせてライブラリ情報を最新に更新

--- a/pg_stats_reporter_library_list.html
+++ b/pg_stats_reporter_library_list.html
@@ -21,6 +21,11 @@
 </thead>
 <tbody>
 <tr>
+<td>第1.3版</td>
+<td>2014/11/04</td>
+<td>最新ライブラリ一覧の更新<br/>最新ライブラリ一覧のPHPに、CentOS6.6の情報を追加</td>
+</tr>
+<tr>
 <td>第1.2版</td>
 <td>2014/10/15</td>
 <td>trunk版の情報を追加<br/>最新ライブラリ一覧の更新<br/>最新ライブラリ一覧のPHPに、CentOS7の情報を追加<br/>pg_stats_reporter 2.0, 3.0のjQueryの備考に、jquery-migrate-1.2.1.jsを使用している旨を追記</td>
@@ -40,7 +45,7 @@
 
 <h2>目次</h2>
 <ul>
-<li><a href="#now">2014/10/15時点最新版</a></li>
+<li><a href="#now">2014/11/04時点最新版</a></li>
 <li><a href="#trunk">pg_stats_reporter trunk</a></li>
 <li><a href="#30">pg_stats_reporter 3.0</a></li>
 <li><a href="#20">pg_stats_reporter 2.0</a></li>
@@ -49,7 +54,7 @@
 
 <br/><hr/>
 
-<h2 id="now">【2014/10/15時点最新版】</h2>
+<h2 id="now">【2014/11/04時点最新版】</h2>
 
 <table border="1">
 <thead>
@@ -63,8 +68,8 @@
 </thead>
 <tbody>
 <tr>
-<td rowspan="15">PHP</td>
-<td rowspan="5">5.3.3</td>
+<td rowspan="20">PHP</td>
+<td rowspan="10">5.3.3</td>
 <td>php-5.3.3-27.el6</td>
 <td rowspan="5">CentOS 6.5<br/>yum updateした最新版</td>
 </tr>
@@ -79,6 +84,23 @@
 </tr>
 <tr>
 <td>php-intl-5.3.3-27.el6</td>
+</tr>
+
+<tr>
+<td bgcolor="cyan">php-5.3.3-38.el6</td>
+<td rowspan="5" bgcolor="cyan">CentOS 6.6<br/>インストール媒体版</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-cli-5.3.3-38.el6</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-common-5.3.3-38.el6</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-pgsql-5.3.3-38.el6</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-intl-5.3.3-38.el6</td>
 </tr>
 
 <tr>
@@ -149,13 +171,13 @@
 </tr>
 <tr>
 <td>Smarty</td>
-<td bgcolor="cyan">3.1.20</td>
+<td bgcolor="cyan">3.1.21</td>
 <td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>tablesorter</td>
-<td bgcolor="cyan">2.17.8</td>
+<td>2.17.8</td>
 <td><a href="http://plugins.jquery.com/tablesorter/">http://plugins.jquery.com/tablesorter/</a></td>
 <td>PagerおよびPagerで使用するアイコンはaddonsに含まれています</td>
 </tr>
@@ -167,19 +189,19 @@
 </tr>
 <tr>
 <td>jQuery UI</td>
-<td bgcolor="cyan">1.11.1</td>
+<td bgcolor="cyan">1.11.2</td>
 <td><a href="http://jqueryui.com/">http://jqueryui.com/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>jquery-ui-timepicker-addon.js</td>
-<td bgcolor="cyan">1.5.0</td>
+<td>1.5.0</td>
 <td><a href="http://trentrichardson.com/examples/timepicker/">http://trentrichardson.com/examples/timepicker/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>Superfish</td>
-<td bgcolor="cyan">1.7.5</td>
+<td>1.7.5</td>
 <td><a href="http://users.tpg.com.au/j_birch/plugins/superfish/">http://users.tpg.com.au/j_birch/plugins/superfish/</a></td>
 <td></td>
 </tr>
@@ -279,7 +301,7 @@
 <tbody>
 <tr>
 <td>jQuery</td>
-<td bgcolor="cyan">2.1.1</td>
+<td>2.1.1</td>
 <td><a href="http://jquery.com/">http://jquery.com/</a></td>
 <td>jquery-2.1.1.min.js</td>
 <td></td>
@@ -293,42 +315,42 @@
 </tr>
 <tr>
 <td>Smarty</td>
-<td bgcolor="cyan">3.1.20</td>
+<td>3.1.20</td>
 <td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
 <td>Smarty-3.1.20.tar.gz</td>
 <td></td>
 </tr>
 <tr>
 <td>tablesorter</td>
-<td bgcolor="cyan">2.17.8</td>
+<td>2.17.8</td>
 <td><a href="http://plugins.jquery.com/tablesorter/">http://plugins.jquery.com/tablesorter/</a></td>
 <td>Mottie-tablesorter-v2.17.8-0-g08bf513.zip</td>
 <td>PagerおよびPagerで使用するアイコンはaddonsに含まれています<br/>カラム選択リストが利用可能な版を使用する</td>
 </tr>
 <tr>
 <td>dygraphs JavaScript Visualization Library</td>
-<td bgcolor="cyan">1.0.1</td>
+<td>1.0.1</td>
 <td><a href="http://dygraphs.com/">http://dygraphs.com/</a></td>
 <td>dygraphs-combined.js</td>
 <td>ファイル名にバージョン情報が付いていないので注意</td>
 </tr>
 <tr>
 <td>jQuery UI</td>
-<td bgcolor="cyan">1.11.1</td>
+<td>1.11.1</td>
 <td><a href="http://jqueryui.com/">http://jqueryui.com/</a></td>
 <td>jquery-ui-1.11.1.custom.zip</td>
 <td></td>
 </tr>
 <tr>
 <td>jquery-ui-timepicker-addon.js</td>
-<td bgcolor="cyan">1.5.0</td>
+<td>1.5.0</td>
 <td><a href="http://trentrichardson.com/examples/timepicker/">http://trentrichardson.com/examples/timepicker/</a></td>
 <td>jquery-ui-timepicker-addon.js</td>
 <td>ファイル名にバージョン情報が付いていないので注意</td>
 </tr>
 <tr>
 <td>Superfish</td>
-<td bgcolor="cyan">1.7.5</td>
+<td>1.7.5</td>
 <td><a href="http://users.tpg.com.au/j_birch/plugins/superfish/">http://users.tpg.com.au/j_birch/plugins/superfish/</a></td>
 <td>superfish-master.zip</td>
 <td>ファイル名にバージョン情報が付いていないので注意</td>
