--- a/pg_stats_reporter_library_list.html
+++ b/pg_stats_reporter_library_list.html
@@ -21,6 +21,11 @@
 </thead>
 <tbody>
 <tr>
+<td>第1.4版</td>
+<td>2015/03/09</td>
+<td>最新ライブラリ一覧の更新</td>
+</tr>
+<tr>
 <td>第1.3版</td>
 <td>2014/11/04</td>
 <td>最新ライブラリ一覧の更新<br/>最新ライブラリ一覧のPHPに、CentOS6.6の情報を追加</td>
@@ -45,7 +50,7 @@
 
 <h2>目次</h2>
 <ul>
-<li><a href="#now">2014/11/04時点最新版</a></li>
+<li><a href="#now">2015/03/09時点最新版</a></li>
 <li><a href="#trunk">pg_stats_reporter trunk</a></li>
 <li><a href="#30">pg_stats_reporter 3.0</a></li>
 <li><a href="#20">pg_stats_reporter 2.0</a></li>
@@ -54,7 +59,7 @@
 
 <br/><hr/>
 
-<h2 id="now">【2014/11/04時点最新版】</h2>
+<h2 id="now">【2015/03/09時点最新版】</h2>
 
 <table border="1">
 <thead>
@@ -70,55 +75,55 @@
 <tr>
 <td rowspan="20">PHP</td>
 <td rowspan="10">5.3.3</td>
-<td>php-5.3.3-27.el6</td>
-<td rowspan="5">CentOS 6.5<br/>yum updateした最新版</td>
+<td bgcolor="cyan">php-5.3.3-40.el6</td>
+<td rowspan="5" bgcolor="cyan">CentOS 6.6<br/>yum updateした最新版</td>
 </tr>
 <tr>
-<td>php-cli-5.3.3-27.el6</td>
+<td bgcolor="cyan">php-cli-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td>php-common-5.3.3-27.el6</td>
+<td bgcolor="cyan">php-common-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td>php-pgsql-5.3.3-27.el6</td>
+<td bgcolor="cyan">php-pgsql-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td>php-intl-5.3.3-27.el6</td>
-</tr>
-
-<tr>
-<td bgcolor="cyan">php-5.3.3-38.el6</td>
-<td rowspan="5" bgcolor="cyan">CentOS 6.6<br/>インストール媒体版</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-cli-5.3.3-38.el6</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-common-5.3.3-38.el6</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-pgsql-5.3.3-38.el6</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-intl-5.3.3-38.el6</td>
+<td bgcolor="cyan">php-intl-5.3.3-40.el6</td>
 </tr>
 
 <tr>
-<td rowspan="5">5.5.13</td>
-<td>php-5.3.13-3.el6</td>
-<td rowspan="5">CentOS 6.5<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php55を使用<br/>VMクラッシュから復旧していないため、2014/06/17版からの変更なし</td>
+<td>php-5.3.3-38.el6</td>
+<td rowspan="5">CentOS 6.6<br/>インストール媒体版</td>
 </tr>
 <tr>
-<td>php-cli-5.5.13-3.el6</td>
+<td>php-cli-5.3.3-38.el6</td>
 </tr>
 <tr>
-<td>php-common-5.5.13-3.el6</td>
+<td>php-common-5.3.3-38.el6</td>
 </tr>
 <tr>
-<td>php-pgsql-5.5.13-3.el6</td>
+<td>php-pgsql-5.3.3-38.el6</td>
 </tr>
 <tr>
-<td>php-intl-5.5.13-3.el6</td>
+<td>php-intl-5.3.3-38.el6</td>
+</tr>
+
+<tr>
+<td rowspan="5" bgcolor="darkgray">5.5.13</td>
+<td bgcolor="darkgray">php-5.3.13-3.el6</td>
+<td rowspan="5" bgcolor="darkgray">CentOS 6.5<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php55を使用<br/>VMクラッシュから復旧していないため、2014/06/17版からの変更なし</td>
+</tr>
+<tr>
+<td bgcolor="darkgray">php-cli-5.5.13-3.el6</td>
+</tr>
+<tr>
+<td bgcolor="darkgray">php-common-5.5.13-3.el6</td>
+</tr>
+<tr>
+<td bgcolor="darkgray">php-pgsql-5.5.13-3.el6</td>
+</tr>
+<tr>
+<td bgcolor="darkgray">php-intl-5.5.13-3.el6</td>
 </tr>
 
 <tr>
@@ -159,7 +164,7 @@
 <tbody>
 <tr>
 <td>jQuery</td>
-<td>2.1.1</td>
+<td bgcolor="cyan">2.1.3</td>
 <td><a href="http://jquery.com/">http://jquery.com/</a></td>
 <td></td>
 </tr>
@@ -171,7 +176,7 @@
 </tr>
 <tr>
 <td>Smarty</td>
-<td bgcolor="cyan">3.1.21</td>
+<td>3.1.21</td>
 <td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
 <td></td>
 </tr>
@@ -183,13 +188,13 @@
 </tr>
 <tr>
 <td>dygraphs</td>
-<td>1.0.1</td>
+<td bgcolor="cyan">1.1.0</td>
 <td><a href="http://dygraphs.com/">http://dygraphs.com/</a></td>
 <td>リリース版は1ファイル(dygraph-combined.js)の模様</td>
 </tr>
 <tr>
 <td>jQuery UI</td>
-<td bgcolor="cyan">1.11.2</td>
+<td bgcolor="cyan">1.11.3</td>
 <td><a href="http://jqueryui.com/">http://jqueryui.com/</a></td>
 <td></td>
 </tr>
@@ -246,20 +251,20 @@
 </tr>
 
 <tr>
-<td>php-5.3.3-26.el6</td>
-<td rowspan="5">CentOS 6.5同梱版</td>
+<td bgcolor="cyan">php-5.3.3-38.el6</td>
+<td rowspan="5" bgcolor="cyan">CentOS 6.6同梱版</td>
 </tr>
 <tr>
-<td>php-cli-5.3.3-26.el6</td>
+<td bgcolor="cyan">php-cli-5.3.3-38.el6</td>
 </tr>
 <tr>
-<td>php-common-5.3.3-26.el6</td>
+<td bgcolor="cyan">php-common-5.3.3-38.el6</td>
 </tr>
 <tr>
-<td>php-pgsql-5.3.3-26.el6</td>
+<td bgcolor="cyan">php-pgsql-5.3.3-38.el6</td>
 </tr>
 <tr>
-<td>php-intl-5.3.3-26.el6</td>
+<td bgcolor="cyan">php-intl-5.3.3-38.el6</td>
 </tr>
 
 <tr>
@@ -282,7 +287,8 @@
 
 </tbody>
 <tfoot><tr><td colspan="4">
-※ CentOS 5およびCentOS 6では、 php-intlはインストールディスクの2にあるため注意<br/>※ CentOS 7では、php-intlはEverything側にしか含まれていないので注意
+※ CentOS 5およびCentOS 6では、 php-intlはインストールディスクの2にあるため注意<br/>※ CentOS 7では、php-intlはEverything側にしか含まれていないので注意<br/>
+※ 前リビジョンの資料からバージョンが更新されたものはバージョンのバックグランドカラーをcyanとしています
 </td></tr></tfoot>
 </table>
 <br/>
@@ -301,7 +307,7 @@
 <tbody>
 <tr>
 <td>jQuery</td>
-<td>2.1.1</td>
+<td bgcolor="cyan">2.1.3</td>
 <td><a href="http://jquery.com/">http://jquery.com/</a></td>
 <td>jquery-2.1.1.min.js</td>
 <td></td>
@@ -315,28 +321,28 @@
 </tr>
 <tr>
 <td>Smarty</td>
-<td>3.1.20</td>
+<td bgcolor="cyan">3.1.21</td>
 <td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
 <td>Smarty-3.1.20.tar.gz</td>
 <td></td>
 </tr>
 <tr>
 <td>tablesorter</td>
-<td>2.17.8</td>
+<td bgcolor="cyan">2.17.8</td>
 <td><a href="http://plugins.jquery.com/tablesorter/">http://plugins.jquery.com/tablesorter/</a></td>
 <td>Mottie-tablesorter-v2.17.8-0-g08bf513.zip</td>
 <td>PagerおよびPagerで使用するアイコンはaddonsに含まれています<br/>カラム選択リストが利用可能な版を使用する</td>
 </tr>
 <tr>
 <td>dygraphs JavaScript Visualization Library</td>
-<td>1.0.1</td>
+<td bgcolor="cyan">1.1.0</td>
 <td><a href="http://dygraphs.com/">http://dygraphs.com/</a></td>
 <td>dygraphs-combined.js</td>
 <td>ファイル名にバージョン情報が付いていないので注意</td>
 </tr>
 <tr>
 <td>jQuery UI</td>
-<td>1.11.1</td>
+<td bgcolor="cyan">1.11.3</td>
 <td><a href="http://jqueryui.com/">http://jqueryui.com/</a></td>
 <td>jquery-ui-1.11.1.custom.zip</td>
 <td></td>
@@ -350,7 +356,7 @@
 </tr>
 <tr>
 <td>Superfish</td>
-<td>1.7.5</td>
+<td bgcolor="cyan">1.7.5</td>
 <td><a href="http://users.tpg.com.au/j_birch/plugins/superfish/">http://users.tpg.com.au/j_birch/plugins/superfish/</a></td>
 <td>superfish-master.zip</td>
 <td>ファイル名にバージョン情報が付いていないので注意</td>
