--- a/pg_stats_reporter_library_list.html
+++ b/pg_stats_reporter_library_list.html
@@ -21,6 +21,11 @@
 </thead>
 <tbody>
 <tr>
+<td>第1.5版</td>
+<td>2015/05/08</td>
+<td>最新ライブラリ一覧の更新<br/>RHEL 7.1対応</td>
+</tr>
+<tr>
 <td>第1.4版</td>
 <td>2015/03/09</td>
 <td>最新ライブラリ一覧の更新</td>
@@ -50,7 +55,7 @@
 
 <h2>目次</h2>
 <ul>
-<li><a href="#now">2015/03/09時点最新版</a></li>
+<li><a href="#now">2015/05/08時点最新版</a></li>
 <li><a href="#trunk">pg_stats_reporter trunk</a></li>
 <li><a href="#30">pg_stats_reporter 3.0</a></li>
 <li><a href="#20">pg_stats_reporter 2.0</a></li>
@@ -59,7 +64,7 @@
 
 <br/><hr/>
 
-<h2 id="now">【2015/03/09時点最新版】</h2>
+<h2 id="now">【2015/05/08時点最新版】</h2>
 
 <table border="1">
 <thead>
@@ -73,22 +78,22 @@
 </thead>
 <tbody>
 <tr>
-<td rowspan="20">PHP</td>
+<td rowspan="30">PHP</td>
 <td rowspan="10">5.3.3</td>
-<td bgcolor="cyan">php-5.3.3-40.el6</td>
-<td rowspan="5" bgcolor="cyan">CentOS 6.6<br/>yum updateした最新版</td>
+<td bgcolor="white">php-5.3.3-40.el6</td>
+<td rowspan="5" bgcolor="white">CentOS 6.6<br/>yum updateした最新版</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-cli-5.3.3-40.el6</td>
+<td bgcolor="white">php-cli-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-common-5.3.3-40.el6</td>
+<td bgcolor="white">php-common-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-pgsql-5.3.3-40.el6</td>
+<td bgcolor="white">php-pgsql-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-intl-5.3.3-40.el6</td>
+<td bgcolor="white">php-intl-5.3.3-40.el6</td>
 </tr>
 
 <tr>
@@ -109,44 +114,80 @@
 </tr>
 
 <tr>
-<td rowspan="5" bgcolor="darkgray">5.5.13</td>
-<td bgcolor="darkgray">php-5.3.13-3.el6</td>
-<td rowspan="5" bgcolor="darkgray">CentOS 6.5<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php55を使用<br/>VMクラッシュから復旧していないため、2014/06/17版からの変更なし</td>
+<td rowspan="10">5.4.16</td>
+<td bgcolor="white">php-5.4.16-23.el7</td>
+<td rowspan="5" bgcolor="cyan">CentOS 7.1<br/>yum updateした最新版</td>
 </tr>
 <tr>
-<td bgcolor="darkgray">php-cli-5.5.13-3.el6</td>
+<td bgcolor="white">php-cli-5.4.16-23.el7</td>
 </tr>
 <tr>
-<td bgcolor="darkgray">php-common-5.5.13-3.el6</td>
+<td bgcolor="white">php-common-5.4.16-23.el7</td>
 </tr>
 <tr>
-<td bgcolor="darkgray">php-pgsql-5.5.13-3.el6</td>
+<td bgcolor="white">php-pgsql-5.4.16-23.el7</td>
 </tr>
 <tr>
-<td bgcolor="darkgray">php-intl-5.5.13-3.el6</td>
+<td bgcolor="white">php-intl-5.4.16-23.el7</td>
 </tr>
 
 <tr>
-<td rowspan="5">5.4.16</td>
-<td>php-5.4.16-21.el7<br/>php-5.4.16-23.el7</td>
-<td rowspan="5">1行目:CentOS 7インストール媒体<br/>2行目:CentOS 7 + yum updateした最新版</td>
+<td bgcolor="cyan">php-5.4.16-23.el7</td>
+<td rowspan="5" bgcolor="cyan">CentOS 7.1<br/>インストール媒体版</td>
 </tr>
 <tr>
-<td>php-cli-5.4.16-21.el7<br/>php-cli-5.4.16-23.el7</td>
+<td bgcolor="cyan">php-cli-5.4.16-23.el7</td>
 </tr>
 <tr>
-<td>php-common-5.4.16-21.el7<br/>php-common-5.4.16-23.el7</td>
+<td bgcolor="cyan">php-common-5.4.16-23.el7</td>
 </tr>
 <tr>
-<td>php-pgsql-5.4.16-21.el7<br/>php-pgsql-5.4.16-23.el7</td>
+<td bgcolor="cyan">php-pgsql-5.4.16-23.el7</td>
 </tr>
 <tr>
-<td>php-intl-5.4.16-21.el7<br/>php-intl-5.4.16-23.el7</td>
+<td bgcolor="cyan">php-intl-5.4.16-23.el7</td>
+</tr>
+
+<tr>
+<td rowspan="5" bgcolor="cyan">5.5.24</td>
+<td bgcolor="cyan">php-5.5.24-1.el6</td>
+<td rowspan="5" bgcolor="cyan">CentOS 6.5<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php55を使用</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-cli-5.5.24-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-common-5.5.24-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-pgsql-5.5.24-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-intl-5.5.24-1.el6</td>
+</tr>
+
+<tr>
+<td rowspan="5" bgcolor="cyan">5.6.8</td>
+<td bgcolor="cyan">php-5.6.8-1.el6</td>
+<td rowspan="5" bgcolor="cyan">CentOS 6.5<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php56を使用</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-cli-5.6.8-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-common-5.6.8-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-pgsql-5.6.8-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-intl-5.6.8-1.el6</td>
 </tr>
 
 </tbody>
 <tfoot><tr><td colspan="4">
-※ php-intlは、インストールディスクの2にあるが、yumを使っている場合は意識する必要なし
+※ CentOS 6では、 php-intlはインストールディスクの2にあるため注意<br/>※ CentOS 7では、php-intlはEverything側にしか含まれていないので注意<br/>
+※ 前リビジョンの資料からバージョンが更新されたものはバージョンのバックグランドカラーをcyanとしています
 </td></tr></tfoot>
 </table>
 <br/>
@@ -164,49 +205,49 @@
 <tbody>
 <tr>
 <td>jQuery</td>
-<td bgcolor="cyan">2.1.3</td>
+<td bgcolor="cyan">2.1.4</td>
 <td><a href="http://jquery.com/">http://jquery.com/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>jqPlot</td>
-<td>1.0.8r1250</td>
+<td bgcolor="white">1.0.8r1250</td>
 <td><a href="http://www.jqplot.com/">http://www.jqplot.com/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>Smarty</td>
-<td>3.1.21</td>
+<td bgcolor="white">3.1.21</td>
 <td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>tablesorter</td>
-<td>2.17.8</td>
+<td bgcolor="white">2.17.8</td>
 <td><a href="http://plugins.jquery.com/tablesorter/">http://plugins.jquery.com/tablesorter/</a></td>
 <td>PagerおよびPagerで使用するアイコンはaddonsに含まれています</td>
 </tr>
 <tr>
 <td>dygraphs</td>
-<td bgcolor="cyan">1.1.0</td>
+<td bgcolor="white">1.1.0</td>
 <td><a href="http://dygraphs.com/">http://dygraphs.com/</a></td>
 <td>リリース版は1ファイル(dygraph-combined.js)の模様</td>
 </tr>
 <tr>
 <td>jQuery UI</td>
-<td bgcolor="cyan">1.11.3</td>
+<td bgcolor="cyan">1.11.4</td>
 <td><a href="http://jqueryui.com/">http://jqueryui.com/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>jquery-ui-timepicker-addon.js</td>
-<td>1.5.0</td>
+<td bgcolor="cyan">1.5.3</td>
 <td><a href="http://trentrichardson.com/examples/timepicker/">http://trentrichardson.com/examples/timepicker/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>Superfish</td>
-<td>1.7.5</td>
+<td bgcolor="white">1.7.5</td>
 <td><a href="http://users.tpg.com.au/j_birch/plugins/superfish/">http://users.tpg.com.au/j_birch/plugins/superfish/</a></td>
 <td></td>
 </tr>
@@ -232,62 +273,97 @@
 </thead>
 <tbody>
 <tr>
-<td rowspan="15">PHP</td>
+<td rowspan="25">PHP</td>
 <td rowspan="10">5.3.3</td>
-<td>php53-5.3.3-5.el5</td>
-<td rowspan="5">CentOS 5.8同梱版</td>
+<td bgcolor="white">php-5.3.3-40.el6</td>
+<td rowspan="5" bgcolor="white">CentOS 6.6<br/>yum updateした最新版</td>
 </tr>
 <tr>
-<td>php53-cli-5.3.3-5.el5</td>
+<td bgcolor="white">php-cli-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td>php53-common-5.3.3-5.el5</td>
+<td bgcolor="white">php-common-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td>php53-pgsql-5.3.3-5.el5</td>
+<td bgcolor="white">php-pgsql-5.3.3-40.el6</td>
 </tr>
 <tr>
-<td>php53-intl-5.3.3-5.el5</td>
-</tr>
-
-<tr>
-<td bgcolor="cyan">php-5.3.3-38.el6</td>
-<td rowspan="5" bgcolor="cyan">CentOS 6.6同梱版</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-cli-5.3.3-38.el6</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-common-5.3.3-38.el6</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-pgsql-5.3.3-38.el6</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-intl-5.3.3-38.el6</td>
+<td bgcolor="white">php-intl-5.3.3-40.el6</td>
 </tr>
 
 <tr>
-<td rowspan="5">5.4.16</td>
-<td>php-5.4.16-21.el7</td>
-<td rowspan="5">CentOS 7同梱版</td>
+<td>php-5.3.3-38.el6</td>
+<td rowspan="5">CentOS 6.6<br/>インストール媒体版</td>
 </tr>
 <tr>
-<td>php-cli-5.4.16-21.el7</td>
+<td>php-cli-5.3.3-38.el6</td>
 </tr>
 <tr>
-<td>php-common-5.4.16-21.el7</td>
+<td>php-common-5.3.3-38.el6</td>
 </tr>
 <tr>
-<td>php-pgsql-5.4.16-21.el7</td>
+<td>php-pgsql-5.3.3-38.el6</td>
 </tr>
 <tr>
-<td>php-intl-5.4.16-21.el7</td>
+<td>php-intl-5.3.3-38.el6</td>
+</tr>
+
+<tr>
+<td rowspan="10">5.4.16</td>
+<td bgcolor="white">php-5.4.16-23.el7</td>
+<td rowspan="5" bgcolor="cyan">CentOS 7.1<br/>yum updateした最新版</td>
+</tr>
+<tr>
+<td bgcolor="white">php-cli-5.4.16-23.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-common-5.4.16-23.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-pgsql-5.4.16-23.el7</td>
+</tr>
+<tr>
+<td bgcolor="white">php-intl-5.4.16-23.el7</td>
+</tr>
+
+<tr>
+<td bgcolor="cyan">php-5.4.16-23.el7</td>
+<td rowspan="5" bgcolor="cyan">CentOS 7.1<br/>インストール媒体版</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-cli-5.4.16-23.el7</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-common-5.4.16-23.el7</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-pgsql-5.4.16-23.el7</td>
+</tr>
+<tr>
+<td bgcolor="cyan">php-intl-5.4.16-23.el7</td>
+</tr>
+
+<tr>
+<td rowspan="5" bgcolor="white">5.5.22</td>
+<td bgcolor="white">php-5.5.22-1.el6</td>
+<td rowspan="5" bgcolor="white">CentOS 6.5<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php55を使用</td>
+</tr>
+<tr>
+<td bgcolor="white">php-cli-5.5.22-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-common-5.5.22-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-pgsql-5.5.22-1.el6</td>
+</tr>
+<tr>
+<td bgcolor="white">php-intl-5.5.22-1.el6</td>
 </tr>
 
 </tbody>
 <tfoot><tr><td colspan="4">
-※ CentOS 5およびCentOS 6では、 php-intlはインストールディスクの2にあるため注意<br/>※ CentOS 7では、php-intlはEverything側にしか含まれていないので注意<br/>
+※ CentOS 6では、 php-intlはインストールディスクの2にあるため注意<br/>※ CentOS 7では、php-intlはEverything側にしか含まれていないので注意<br/>
 ※ 前リビジョンの資料からバージョンが更新されたものはバージョンのバックグランドカラーをcyanとしています
 </td></tr></tfoot>
 </table>
@@ -307,63 +383,63 @@
 <tbody>
 <tr>
 <td>jQuery</td>
-<td bgcolor="cyan">2.1.3</td>
+<td bgcolor="white">2.1.3</td>
 <td><a href="http://jquery.com/">http://jquery.com/</a></td>
 <td>jquery-2.1.1.min.js</td>
 <td></td>
 </tr>
 <tr>
 <td>jqPlot</td>
-<td>1.0.8r1250</td>
+<td bgcolor="white">1.0.8r1250</td>
 <td><a href="http://www.jqplot.com/">http://www.jqplot.com/</a></td>
 <td>jquery.jqplot.1.0.8r1250.tar.gz</td>
 <td></td>
 </tr>
 <tr>
 <td>Smarty</td>
-<td bgcolor="cyan">3.1.21</td>
+<td bgcolor="white">3.1.21</td>
 <td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
 <td>Smarty-3.1.20.tar.gz</td>
 <td></td>
 </tr>
 <tr>
 <td>tablesorter</td>
-<td bgcolor="cyan">2.17.8</td>
+<td bgcolor="white">2.17.8</td>
 <td><a href="http://plugins.jquery.com/tablesorter/">http://plugins.jquery.com/tablesorter/</a></td>
 <td>Mottie-tablesorter-v2.17.8-0-g08bf513.zip</td>
 <td>PagerおよびPagerで使用するアイコンはaddonsに含まれています<br/>カラム選択リストが利用可能な版を使用する</td>
 </tr>
 <tr>
 <td>dygraphs JavaScript Visualization Library</td>
-<td bgcolor="cyan">1.1.0</td>
+<td bgcolor="white">1.1.0</td>
 <td><a href="http://dygraphs.com/">http://dygraphs.com/</a></td>
 <td>dygraphs-combined.js</td>
 <td>ファイル名にバージョン情報が付いていないので注意</td>
 </tr>
 <tr>
 <td>jQuery UI</td>
-<td bgcolor="cyan">1.11.3</td>
+<td bgcolor="white">1.11.3</td>
 <td><a href="http://jqueryui.com/">http://jqueryui.com/</a></td>
 <td>jquery-ui-1.11.1.custom.zip</td>
 <td></td>
 </tr>
 <tr>
 <td>jquery-ui-timepicker-addon.js</td>
-<td>1.5.0</td>
+<td bgcolor="white">1.5.0</td>
 <td><a href="http://trentrichardson.com/examples/timepicker/">http://trentrichardson.com/examples/timepicker/</a></td>
 <td>jquery-ui-timepicker-addon.js</td>
 <td>ファイル名にバージョン情報が付いていないので注意</td>
 </tr>
 <tr>
 <td>Superfish</td>
-<td bgcolor="cyan">1.7.5</td>
+<td bgcolor="white">1.7.5</td>
 <td><a href="http://users.tpg.com.au/j_birch/plugins/superfish/">http://users.tpg.com.au/j_birch/plugins/superfish/</a></td>
 <td>superfish-master.zip</td>
 <td>ファイル名にバージョン情報が付いていないので注意</td>
 </tr>
 </tbody>
 <tfoot><tr><td colspan="5">
-※ pg_stats_reporter 3.0から変更したものはバージョンのバックグランドカラーをcyanとしています
+※ 前リビジョンの資料からバージョンが更新されたものはバージョンのバックグランドカラーをcyanとしています
 </td></tr></tfoot>
 </table>
 
