PHP 5.6でpg_stats_reporterの動作確認を実施していないことを追記

--- a/pg_stats_reporter_library_list.html
+++ b/pg_stats_reporter_library_list.html
@@ -169,7 +169,7 @@
 <tr>
 <td rowspan="5" bgcolor="cyan">5.6.8</td>
 <td bgcolor="cyan">php-5.6.8-1.el6</td>
-<td rowspan="5" bgcolor="cyan">CentOS 6.5<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php56を使用</td>
+<td rowspan="5" bgcolor="cyan">CentOS 6.5<br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php56を使用<br/>pg_stats_reporter動作未確認</td>
 </tr>
 <tr>
 <td bgcolor="cyan">php-cli-5.6.8-1.el6</td>
