--- a/pg_stats_reporter_library_list.html
+++ b/pg_stats_reporter_library_list.html
@@ -12,7 +12,7 @@
 <h2>目次</h2>
 <ul>
 <li><a href="#change">変更履歴</a></li>
-<li><a href="#now">2018/01/12時点最新版</a></li>
+<li><a href="#now">2018/01/18時点最新版</a></li>
 <li><a href="#trunk">pg_stats_reporter trunk</a></li>
 <li><a href="#100">pg_stats_reporter 10</a></li>
 <li><a href="#33">pg_stats_reporter 3.3</a></li>
@@ -36,6 +36,11 @@
 </tr>
 </thead>
 <tbody>
+<tr>
+<td>第1.12版</td>
+<td>2019/02/05</td>
+<td>最新版の表からPHP 5.5.38とPHP 5.6.40を削除</td>
+</tr>
 <tr>
 <td>第1.11版</td>
 <td>2019/01/18</td>
@@ -150,41 +155,6 @@
 <td bgcolor="cyan">php-intl-5.4.16-46.el7</td>
 </tr>
 
-<tr>
-<td rowspan="5" bgcolor="cyan">5.5.38</td>
-<td bgcolor="cyan">php-5.5.38-11.el7</td>
-<td rowspan="5" bgcolor="cyan">epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php55を使用<br/>pg_stats_reporter動作未確認</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-cli-5.5.38-11.el7</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-common-5.5.38-11.el7</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-pgsql-5.5.38-11.el7</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-intl-5.5.38-11.el7</td>
-</tr>
-
-<tr>
-<td rowspan="5" bgcolor="cyan">5.6.40</td>
-<td bgcolor="cyan">php-5.6.40-1.el7</td>
-<td rowspan="5" bgcolor="cyan"><br/>epel, remiリポジトリを追加して、yum updateした最新版<br/>phpはremi-php56を使用<br/>pg_stats_reporter動作未確認</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-cli-5.6.40-1.el7</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-common-5.6.40-1.el7</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-pgsql-5.6.40-1.el7</td>
-</tr>
-<tr>
-<td bgcolor="cyan">php-intl-5.6.40-1.el7</td>
-</tr>
 <tr>
 <td bgcolor="cyan">7.3.1</td><td rowspan="5" colspan="2">コミュニティ(http://php.net/)がリリースしている最新版</td>
 </tr>
