使用ライブラリも含めて10/7版に更新

--- a/pg_stats_reporter_library_list.html
+++ b/pg_stats_reporter_library_list.html
@@ -12,7 +12,7 @@
 <h2>目次</h2>
 <ul>
 <li><a href="#change">変更履歴</a></li>
-<li><a href="#now">2019/10/01時点最新版</a></li>
+<li><a href="#now">2019/10/07時点最新版</a></li>
 <li><a href="#trunk">pg_stats_reporter trunk</a></li>
 <li><a href="#110">pg_stats_reporter 11</a></li>
 <li><a href="#100">pg_stats_reporter 10</a></li>
@@ -34,6 +34,11 @@
 </thead>
 <tbody>
 <tr>
+<td>第1.15版</td>
+<td>2019/10/07</td>
+<td>2019/10/07最新版に更新</td>
+</tr>
+<tr>
 <td>第1.14版</td>
 <td>2019/10/04</td>
 <td>PHP 7.2の使用パッケージにphp-xmlを追加<br/>pg_stats_reporter 3.2以前の情報を削除し、情報確認方法を記述<br/>trunk版の表からCentOS 6を削除、CentOS 8を追加</td>
@@ -53,17 +58,12 @@
 <td>2019/01/18</td>
 <td>pg_stats_reporter 11向け最新化</td>
 </tr>
-<tr>
-<td>第1.10版</td>
-<td>2018/01/12</td>
-<td>pg_stats_reporter 10向け最新化<br/>変更履歴を最新から5件に削減</td>
-</tr>
 </tbody>
 </table>
 
 <br/><hr/>
 
-<h2 id="now">【2019/10/01時点最新版】</h2>
+<h2 id="now">【2019/10/07時点最新版】</h2>
 
 <table border="1">
 <thead>
@@ -185,7 +185,7 @@
 <tbody>
 <tr>
 <td>jQuery</td>
-<td bgcolor="white">3.3.1</td>
+<td bgcolor="cyan">3.4.1</td>
 <td><a href="http://jquery.com/">http://jquery.com/</a></td>
 <td></td>
 </tr>
