--- a/pg_stats_reporter_library_list.html
+++ b/pg_stats_reporter_library_list.html
@@ -12,7 +12,7 @@
 <h2>目次</h2>
 <ul>
 <li><a href="#change">変更履歴</a></li>
-<li><a href="#now">2019/11/08時点最新版</a></li>
+<li><a href="#now">2020/01/07時点最新版</a></li>
 <li><a href="#trunk">pg_stats_reporter trunk</a></li>
 <li><a href="#110">pg_stats_reporter 11</a></li>
 <li><a href="#100">pg_stats_reporter 10</a></li>
@@ -34,6 +34,11 @@
 </thead>
 <tbody>
 <tr>
+<td>第1.17版</td>
+<td>2020/01/07</td>
+<td>2020/01/07最新版に更新</td>
+</tr>
+<tr>
 <td>第1.16版</td>
 <td>2019/11/08</td>
 <td>trunkの使用ライブラリを最新に更新</td>
@@ -53,17 +58,12 @@
 <td>2019/10/01</td>
 <td>最新版の表からCentOS 6を削除、CentOS 8を追加<br/>pg_stats_reporterを追加</td>
 </tr>
-<tr>
-<td>第1.12版</td>
-<td>2019/02/05</td>
-<td>最新版の表からPHP 5.5.38とPHP 5.6.40を削除</td>
-</tr>
 </tbody>
 </table>
 
 <br/><hr/>
 
-<h2 id="now">【2019/11/08時点最新版】</h2>
+<h2 id="now">【2020/01/07時点最新版】</h2>
 
 <table border="1">
 <thead>
@@ -154,16 +154,13 @@
 </tr>
 
 <tr>
-<td bgcolor="white">7.3.10</td><td rowspan="4" colspan="2">コミュニティ(http://php.net/)がリリースしている最新版</td>
+<td bgcolor="cyan">7.4.1</td><td rowspan="3" colspan="2">コミュニティ(http://php.net/)がリリースしている最新版</td>
 </tr>
 <tr>
-<td bgcolor="white">7.2.23</td>
+<td bgcolor="cyan">7.3.13</td>
 </tr>
 <tr>
-<td bgcolor="white">7.1.32</td>
-</tr>
-<tr>
-<td bgcolor="white">7.4RC2</td>
+<td bgcolor="cyan">7.2.26</td>
 </tr>
 </tbody>
 <tfoot><tr><td colspan="4">
@@ -197,13 +194,13 @@
 </tr>
 <tr>
 <td>Smarty</td>
-<td bgcolor="white">3.1.33</td>
+<td bgcolor="cyan">3.1.34</td>
 <td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>tablesorter</td>
-<td bgcolor="white">2.31.1</td>
+<td bgcolor="cyan">2.31.2</td>
 <td bgcolor="white"><a href="https://github.com/Mottie/tablesorter">https://github.com/Mottie/tablesorter</a></li>
 <td bgcolor="white">PagerおよびPagerで使用するアイコンはaddonsに含まれています</td>
 </tr>
@@ -351,9 +348,9 @@
 <tbody>
 <tr>
 <td>jQuery</td>
-<td bgcolor="cyan">3.4.1</td>
+<td bgcolor="white">3.4.1</td>
 <td><a href="http://jquery.com/">http://jquery.com/</a></td>
-<td bgcolor="cyan">jquery-3.4.1.min.js</td>
+<td bgcolor="white">jquery-3.4.1.min.js</td>
 <td></td>
 </tr>
 <tr>
